php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44938 gettext functions crash with long strings
Submitted: 2008-05-07 20:34 UTC Modified: 2008-10-30 14:28 UTC
From: hoffie at gentoo dot org Assigned:
Status: Closed Package: Gettext related
PHP Version: 5.2.6 OS: Linux
Private report: No CVE-ID: None
 [2008-05-07 20:34 UTC] hoffie at gentoo dot org
Description:
------------
Has this ever been addressed? 5.2.6 still crashes.

http://www.securityfocus.com/archive/1/483648/30/0/threaded

Reproduce code:
---------------
$ php -r 'dgettext(str_repeat("A",8476509),"hi");'

(See $URL for more examples)

Expected result:
----------------
No crash...

Actual result:
--------------
Segmentation fault

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-10-30 14:28 UTC] lstrojny@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC