Fixed bug #44938 (gettext functions crash with overly long domain)